{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 13,
  "lineage": "943d8751-dc2a-5338-248d-8421af91b95c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc1_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:399515353335:internet-gateway/igw-0535f539930711e5a",
            "id": "igw-0535f539930711e5a",
            "owner_id": "399515353335",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-053b6ff7ec7e0cfd9"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0535f539930711e5a",
            "id": "r-rtb-031b7985d63b213aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-031b7985d63b213aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc1_internet_gateway",
            "aws_route_table.vpc1_public_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc1_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:399515353335:route-table/rtb-031b7985d63b213aa",
            "id": "rtb-031b7985d63b213aa",
            "owner_id": "399515353335",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev_public_rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev_public_rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-053b6ff7ec7e0cfd9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc1_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0836c7546a36f7ac9",
            "route_table_id": "rtb-031b7985d63b213aa",
            "subnet_id": "subnet-03ebf5bb863f274aa"
          },
          "dependencies": [
            "aws_route_table.vpc1_public_rt",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:399515353335:subnet/subnet-03ebf5bb863f274aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ebf5bb863f274aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "399515353335",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-053b6ff7ec7e0cfd9"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:399515353335:vpc/vpc-053b6ff7ec7e0cfd9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03cd3b5ddc5456fa5",
            "default_route_table_id": "rtb-0de750df0c74117be",
            "default_security_group_id": "sg-0ab300ec5ef205315",
            "dhcp_options_id": "dopt-0e28812457548dba6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-053b6ff7ec7e0cfd9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de750df0c74117be",
            "owner_id": "399515353335",
            "tags": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}